   - BeginPopupContextItem("foo", ImGuiPopupFlags_NoReopen);               // !! Behavior changed !! Was Left button + flags. Now will defaults to Right button! --> Use ImGuiPopupFlags_MouseButtonLeft | xxx.

Other Changes:

- Fonts:
  - Added AddFontDefaultVector(): a new embedded scalable font!
    Based on ProggyVector by Tristan Grimmer, the same author as our good-old ProggyClean.
    The font data was carefully subsetted, trimmed and compressed so the embedded
    data is ~18 KB. Embedding a scalable default font ensures that Dear ImGui can
    be easily and readily used in all contexts, even without file system access.
    As always you can opt-out of the embedded font data if desired. A sizing tweak
    was also applied to ensure the new font is a closer match to the classic font.
  - AddFontDefault() now automatically selects an embedded font between
    the classic pixel-looking one and the new scalable one.
  - Fixed an issue related to EllipsisChar handling, while changing
    font loader or font loader flags dynamically in Style->Fonts menus.
  - imgui_freetype: fixed overwriting ImFontConfig::PixelSnapH when hinting
    is enabled, creating side-effects when later disabling hinting or
    dynamically switching to stb_truetype rasterizer.
  - Post rescale GlyphOffset is always rounded.
- Textures:
  - Fixed a building issue when ImTextureID is defined as a struct.
  - Fixed displaying texture # in Metrics/Debugger window.
- Menus:
  - Fixed MenuItem() label position and BeginMenu() arrow/icon/popup positions,
    when used inside a line with a baseline offset.
- TreeNode:
  - Fixed highlight position when used inside a line with a large text baseline offset.
    (never quite worked in this situation; but then most of the time the text
    baseline offset ends up being zero or FramePadding.y for a given line).
- Tables:
  - Fixed an issue where a very thin scrolling table would advance parent layout